Finished assessment. Committing all changes.

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
                 
                 <form>
                   <!-- Add Input filters here -->
+                  <input type="text" name="word" placeholder="One Word Only" id="word" pattern="[^\s]" />
+                  <input type="text" name="number" placeholder="Number" id="number" pattern="\d{1,}" />
                 </form>
                 
                 <ul
